added html files some js

--- a/static/styles.css
+++ b/static/styles.css
@@ -1,6 +1,7 @@
-html{
+html {
     font-family: "Operator Mono Lig", sans-serif;
 }
-body{
-    background-color: aquamarine;
+
+body {
+    background-color: lightgrey;
 }
